# yintu-pmc

./: .gitignore  8月9月不缺料订单清单.xlsx  AI_CONTEXT.md  CLAUDE.md  Dockerfile  LEFT_JOIN_ARCHITECTURE.md  REQUIREMENTS.md  SessionInfo_错误修复指南.md  SessionInfo终极解决方案.md  Streamlit错误综合解决指南.md  WO过滤规则记录.md  analyze_no_supplier_materials.py  check_columns.py  check_orders.py  check_orders_fixed.py  config.json  docker-compose.yml  extract_finished_products.py  file_config.py  filter_wo_analysis.py  install.bat  install.sh  join_comparison_demo.py  left_join_demo.py  merge.xlsx  merge_order_files.py  merged_orders_20250826_153113.xlsx  output field.json  pyproject.toml  requirements.txt  robust_file_loader.py  setIn_error_demo.py  setIn错误彻底解决指南.md  setup.py  silverPlan_analysis.py  silverPlan_analysis_improved.py  simple_dashboard.py  stable_dashboard.py  streamlit_dashboard.py  streamlit_dashboard_fixed.py  (+26 more)
.cursor/: scratchpad.md
input/: mat_owe_pso_accurate_20250828_191028.xlsx  mat_owe_pso_backup_20250828.xlsx  mat_owe_pso旧.xlsx  系統欠料增加P-R單號(1).xlsx
inputBak/: 828全mcComplete250828.xlsx  mat_owe_pso-old.xlsx  mat_owe_pso.xlsx  order-amt-89-c.xlsx
